@@ -3853,23 +3853,63 @@ name|ckoff
 argument_list|)
 expr_stmt|;
 block|}
-return|return
+name|InputStream
+name|blockInStream
+init|=
 operator|new
-name|ReplicaInputStreams
+name|FileInputStream
 argument_list|(
 name|blockInFile
 operator|.
 name|getFD
 argument_list|()
-argument_list|,
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+name|InputStream
+name|metaInStream
+init|=
+operator|new
+name|FileInputStream
+argument_list|(
 name|metaInFile
 operator|.
 name|getFD
 argument_list|()
+argument_list|)
+decl_stmt|;
+return|return
+operator|new
+name|ReplicaInputStreams
+argument_list|(
+name|blockInStream
+argument_list|,
+name|metaInStream
 argument_list|,
 name|ref
 argument_list|)
 return|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+name|IOUtils
+operator|.
+name|cleanup
+argument_list|(
+literal|null
+argument_list|,
+name|blockInStream
+argument_list|)
+expr_stmt|;
+throw|throw
+name|e
+throw|;
+block|}
 block|}
 catch|catch
 parameter_list|(
